<resources>
    <string name="app_name" translatable="false">SonarApp</string>
    <string name="loading">Loading…</string>
    <string name="help_nav">Help</string>
    <string name="help">Plays the help message</string>
    <string name="help_msg_tutorial">Welcome! To start measuring, point your loudspeaker towards the front and make sure to have your Music volume all the way up.
        To increase or decrease the text to speech volume, swipe right or left respectively.</string>
    <string name="help_msg">This app helps measure the distance in meters to the nearest object in front of you.</string>
    <string name="help_msg_inst">To start measuring, point your loudspeaker towards the front and make sure to have your Music volume all the way up.
        To increase or decrease the text to speech volume, swipe right or left respectively. Find under Settings tab more
        options to adjust the voice according to your preferences.</string>
    <string name="increase_volume_snackbar_txt">Music volume is too low, increase the volume to the max volume</string>
    <string name="permissions_dialog_msg">Please grant the requested permissions, the app cannot work without them.</string>
    <string name="permissions_dialog_title">Grant Permissions</string>
    <string name="permissions_dialog_pos_btn_txt">Grant</string>
    <string name="permissions_dialog_neg_btn_txt">Close App</string>
    <string name="error_dialog_title">Error</string>
    <string name="error_dialog_pos_btn_txt">Close App</string>
    <string name="tts_volume_seekbar_title">Text to speech volume</string>
    <string name="meters">meters</string>
    <string name="distance_title">The path is clear for</string>
    <string name="error_tts_msg">An error has occurred. Please take a screenshot and report it to the developers.</string>
    <string name="tts_volume_instructions">Swipe right or left to increase or decrease the volume</string>
    <string name="Audio">Audio</string>
    <string name="Speech_speed">Speech speed</string>
    <string name="Speech_volume">Speech volume</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="About">About</string>
    <string name="contact_us">Contact us</string>
    <string name="play_store">Rate us on play store</string>
    <string name="start_tutorial">Help</string>
    <string name="app_version">App version</string>
    <string name="app_version_num">1.0</string>
    <string name="tutorial_message_content_description">Tutorial message</string>
    <string name="start">Start</string>
    <string name="app_logo_content_description">App logo</string>
    <string name="usage_instructions_headline_content_description">Usage Instructions</string>
    <string name="stop">Stop</string>
    <string name="distance_text_view_start_text">Click Start</string>
    <string name="launch_app">Launch App</string>
    <string name="tts_upper_limit_distance">More than 5 meters</string>
    <string name="tts_lower_limit_distance">Less than 2.2 meters</string>
</resources>
