<!--
  Copyright (c) Microsoft Corporation. All rights reserved.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:background="@color/colorAsh"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
            android:id="@+id/audio_linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
                android:id="@+id/audio_text_view"
                android:layout_marginBottom="16dp"
                android:focusable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="33dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:text="@string/Audio"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <Button android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:id="@+id/tts_speed_button"
                    android:text="@string/Speech_speed"
                    android:textSize="14sp"
                    android:gravity="left|center_vertical"
                    android:textAllCaps="false"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="0dp"
                    android:backgroundTint="@color/colorWhite"/>

            <Button android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:id="@+id/tts_volume_button"
                    android:text="@string/Speech_volume"
                    android:textSize="14sp"
                    android:gravity="left|center_vertical"
                    android:textAllCaps="false"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="0dp"
                    android:backgroundTint="@color/colorWhite"/>

        </LinearLayout>

        <TextView
                android:id="@+id/about_text_view"
                android:layout_marginBottom="16dp"
                android:focusable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="33dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:text="@string/About"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <Button android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:id="@+id/contact_us_button"
                    android:text="@string/contact_us"
                    android:textSize="14sp"
                    android:gravity="left|center_vertical"
                    android:textAllCaps="false"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="0dp"
                    android:backgroundTint="@color/colorWhite"/>

            <Button android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:id="@+id/play_store_button"
                    android:text="@string/play_store"
                    android:textSize="14sp"
                    android:gravity="left|center_vertical"
                    android:textAllCaps="false"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="0dp"
                    android:backgroundTint="@color/colorWhite"/>
            <Button android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:id="@+id/tutorial_button"
                    android:text="@string/start_tutorial"
                    android:textSize="14sp"
                    android:gravity="left|center_vertical"
                    android:textAllCaps="false"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="0dp"
                    android:backgroundTint="@color/colorWhite"/>
            <LinearLayout
                    android:id="@+id/app_version"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@color/colorAsh"
                    android:gravity="start|center_vertical"
                    android:orientation="horizontal"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        android:text="@string/app_version"
                        android:textColor="@color/colorBlack"
                        android:textSize="14sp"/>

                <TextView
                        android:id="@+id/appVersionLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:gravity="end"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        android:text="@string/app_version_num"
                        android:textColor="@color/colorBlack"
                        android:textSize="16sp"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>