<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/usage_instructions_headline_content_description"
            android:textSize="36sp"
            android:textColor="@color/colorDarkGray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/help_intro" />

    <ImageView
            android:id="@+id/imageView"
            android:layout_width="138dp"
            android:layout_height="140dp"
            android:contentDescription="@string/app_logo_content_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.169"
            app:srcCompat="@mipmap/ic_launch"/>

    <TextView
            android:id="@+id/help_intro"
            android:layout_width="353dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/tutorial_message_content_description"
            android:text="@string/help_msg"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:id="@+id/separator"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:background="@android:color/darker_gray"/>

    <TextView
            android:id="@+id/help_instructions"
            android:layout_width="353dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/tutorial_message_content_description"
            android:text="@string/help_msg_inst"
            android:gravity="center"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/separator" />

</android.support.constraint.ConstraintLayout>