<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout" android:backgroundTint="@color/colorAsh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true">

    <Button
            android:id="@+id/mainStartStopButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/start"
            android:textSize="24sp"
            android:textColor="@color/colorAsh"
            android:background="@drawable/rounded_button"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.107"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:id="@+id/distanceTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="76sp"
            android:textColor="@color/colorBlack"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/distanceTitleTextView"/>

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:id="@+id/separator"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@+id/metersTextView"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toTopOf="@+id/ttsVolumeSeekBarTitle"/>

    <TextView
            android:id="@+id/ttsVolumeSeekBarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/tts_volume_seekbar_title"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@+id/separator"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/metersTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/meters"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/distanceTextView"
            android:layout_marginTop="20dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/distanceTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="52dp"
            android:gravity="center"
            android:text="@string/distance_title"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@+id/distanceTextView"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/mainStartStopButton"
            app:layout_constraintHorizontal_bias="0.505"/>


</android.support.constraint.ConstraintLayout>
